--- a/src/nav.css
+++ b/src/nav.css
@@ -1,4 +1,12 @@
-#inputt input{
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0;
+}
+
+.inputt input{
   display: block;
   margin: auto;
   margin-bottom: 4px;
