--- a/src/view/nav.css
+++ b/src/view/nav.css
@@ -13,7 +13,7 @@ input[type=number]::-webkit-outer-spin-button {
   position: relative;
   text-align: center;
 }
-.nav {
+.engulf {
   text-align: center;
   color: white;
 }
