--- a/src/view/nav.css
+++ b/src/view/nav.css
@@ -6,7 +6,7 @@ input[type=number]::-webkit-outer-spin-button {
     margin: 0;
 }
 
-.inputt input{
+.ask input{
   display: block;
   margin: auto;
   margin-bottom: 4px;
